# osint-agent

./: .gitignore  CLAUDE.md  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml  setup.cfg  tox.ini
agent/: graph.py  nodes.py  prompts.py  report.py
eidolon/: main.py
eidolon/agent/: graph.py  nodes.py  report.py
eidolon/core/: models.py
eidolon/models/: ai_audit.py  broker_scan.py  ghunt.py  holehe.py  public_records.py  shared.py  sherlock.py  shodan.py  spiderfoot.py  stealer.py
eidolon/tools/: ai_audit.py  blackbird.py  broker_scan.py  dehashed.py  exodus.py  ghunt.py  hibp.py  holehe.py  maigret.py  paste.py  phone.py  public_records.py  sherlock.py  shodan.py  spiderfoot.py  stealer.py  whoxy.py
models/: ai_audit.py  blackbird.py  broker_scan.py  dehashed.py  exodus.py  hibp.py  holehe.py  leakradar.py  maigret.py  paste.py  phone.py  shared.py  spiderfoot.py  whoxy.py
patches/: bazzell.md  exodus.md  shodan.md
tests/: test_analysis_postprocess.py  test_pipeline.py  test_routing.py  test_tools.py
tests/fixtures/: analysis_response.json  exodus_response.json  leakradar_response.json
tools/: ai_audit.py  blackbird.py  broker_scan.py  dehashed.py  exodus.py  ghunt.py  hibp.py  holehe.py  leakradar.py  maigret.py  paste.py  phone.py  public_records.py  sherlock.py  shodan.py  spiderfoot.py  stealer.py  whoxy.py
