[project]
name = "osint-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "apify-client>=3.0.2",
    "holehe>=1.61",
    "ghunt>=2.3.4",
    "maigret>=0.6.1",
    "aiohttp>=3.14.0",
    "chardet>=7.4.3",
    "reportlab>=4.5.1",
    "pillow>=10.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
